# xorg__app__constype

./: .cvsignore  .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  README  configure.ac  constype.c  constype.man
